discord-themes/project-nova/project-nova.css
/* ... */
.title_a7d72e{
    /* solves issue where this element above emoji picker */
    z-index: 3;
}
.themed_fc4f04 .icon_fc4f04{
    color: var(--accent);
}
.selected_fc4f04 .icon_fc4f04 {
    filter: drop-shadow(0 0 5px)
}
.iconBadge_fc4f04{
    /* dot that appears for new pins and inbox items */
    background: var(--interactive-normal);
}
/* Show nicknames for long usernames */
.children_fc4f04{
    flex-wrap: wrap;
    row-gap: 8px;
}
.avatar_a7d72e,
.akaBadge_d6c26f{
    margin-left: 0;
}
.titleWrapper_fc4f04{
    max-width: calc(100% - 44px);
}
.title_fc4f04 div{
    overflow: hidden;
    text-overflow: ellipsis;
}
.divider_fc4f04{
    display: none;
}
.nicknames__12efb{
    flex-basis: 0;
}
/* Plus Button in DM List Header */
.clickable_fc4f04 .icon_fc4f04{
    color: var(--accent)
}
.clickable_fc4f04:hover .icon_fc4f04 {
    color: var(--accent-2);
}
/* GROUP DM NAME */
.outer_f8b740 .input_f8b740{
    border: 2px solid #00f0;
}
.outer_f8b740:hover .input_f8b740{
    border-color: var(--accent);
}
.input_f8b740:focus{
    background: var(--input-background);
}
/* PINNED MESSAGES */
[aria-label="Pinned Messages"] [class*="emptyPlaceholder_"] [class*="image_"]{
    display: none;
}
[aria-label="Pinned Messages"] [class*="emptyPlaceholder_"] [class*="body_"]{
    line-height: 0;
    text-indent: -9999px;
    white-space: nowrap;
}
[aria-label="Pinned Messages"] [class*="emptyPlaceholder_"] [class*="body_"]:after{
    content: "No pinned messages in this channel.";
    display: block;
    line-height: 1.25;
    text-indent: 0;
}
/* HEADER SEARCH BAR */
[class*="search_"] [class*="searchBar_"]{
    border: 3px solid var(--accent);
    box-sizing: content-box;
    border-radius: 8px;
    width: 300px; /*default: 144px*/
}
:root [class*="searchAnswer_"],
:root [class*="searchFilter_"]{
    background: var(--accent);
    color: var(--accent-contrast);
}
[class*="searchFilter_"]{
    border-radius: 4px 0 0 4px;
}
[class*="searchAnswer_"]{
    border-radius: 0 4px 4px 0;
}
/*-----SEARCH BARS-----*/
[class*="searchBar_"] [class*="searchBarComponent_"]{
    border: 3px solid var(--accent);
    box-sizing: content-box;
    border-radius: 8px;
}
/*-----SEARCH RESULTS WRAP-----*/
.highlight{ /*highlighted queried text*/
    background: var(--accent);
    color: var(--accent-contrast);
}
.container_ddc613 .buttonsContainer_ddc613{
    display: flex;
    /*always show jump button*/
}
.buttonsContainer_ddc613{
    right: 0;
}
.button_ddc613,
.button_ddc613:hover{
    color: var(--accent-contrast);
}
.button_ddc613{
    background: var(--accent);
}
.button_ddc613:hover{
    background: var(--accent-2);
}
/*-----ANTI DUMB SHIT (work in progress)-----*/
[class*="activitycharacter" i],
[class^="art_"],
[class*="artcontainer" i],
[class*="bannerArt_"],
[class*="backgroundImages_"],
[class*="bigperkart" i],
[class*="bottomIllustration_"],
[class*="confetti" i],
[class*="emptyimage-" i],
[class*="emptystateimage-" i],
[class*="errorStateIcon_"], /*Group DM modal error state icon (not friends and trying to make group DM)*/
.footerImage_fab929,
[class*="guildBoostGemWrapper_"],
[class*="heroBanner-" i],
[class*="howItWorksImage_"],
.image_b12c98,
[class*="noResultsImage_"],
[class*="perkNewsletter_"],
[class*="perkBadge_"],
[class*="perkChallenges_"],
[class*="perkpreviewimage-" i],
[class*="perkscardart" i],
[class*="reactionInner_"][aria-label*="super react"],
img[class*="roleSubscription"],
[class*="sparkle_"], /* a sparkleContainer_ class is used for user settings -> profiles -> profile theme*/
[class*="stars" i],
[class*="upsellImage_"],
[class*="wumpus" i],
img[alt*="clyde" i],
img[alt*="mallow" i],
img[alt*="graggle" i],
img[alt*="sparkle"],
img[alt*="wumpus" i],
/* specific assets below */
[src*="/assets/47f29fcff307e852553b.svg"],
[style*="/assets/4a0bbd7108c55228c0a7.svg"],
[style*="/assets/a72746e7108167af95c8.svg"],
[style*="/assets/db947193d549bd45c3a3.svg"],
[style*="/assets/01864c39871ce619d855.svg"]{
    display: none !important;
}
/*-----MISCELLANEOUS-----*/
.toast_f42767{
    background: var(--primary-700);
}
[class*="dotBorderBase_"]{
	fill: var(--primary-130);
}
.searchBar_e0840f{ /* role serach bar in server settings, shared with friends tab*/
	background: var(--input-background);
}
[fill="#5865f2"]{
    /* Customize your server modal */
    fill: var(--accent);
}
.container_eedf95 .focused_eedf95{
    /* search dropdown query container */
    background: none;
}
.icon_a31c43{
    /*owner icon bandaid fix*/
    top: 0;
}
.popout_f6639d{
    /*"best seen in voice and video" -leafy*/
    background: var(--modal-footer-background);
}
[class*="cardPrimary_"],
[class*="cardPrimary_"][class*="editable"]{
    border-color: var(--accent);
}
::selection{
    background: var(--accent);
    color: var(--accent-contrast);
}
[class*="selectionCircle_"]{
    box-shadow: inset 0 0 0 2px var(--brand-500);
}
[class*="selectionCircle_"] [fill="var(--white-500)"],
.selectedIcon_f6639d circle[fill="white"],
[style*="background-color: var(--brand-experiment-500)"] [fill="var(--white-500)"]{
    fill: var(--accent-contrast);
}
[style*="background-color: var(--brand-260)"],
:root [class*="premiumIndicator_"], /* go to Billing -> see "subscription" */
[style*="background-color: var(--brand-500)"],
[style*="background-color: var(--brand-500)"] [class*="automodText_"],
[class*="lookFilled_"][class*="colorBrandNew_"],
[class*="lookFilled_"][class*="colorBrand_"] .defaultColor__77578,
:root .activeButton_b48941, /*numbered pages at bottom of search results wrap*/
:root .activeButton_b48941:hover{
    color: var(--accent-contrast)
}
.header_a0, /*settings sidebar header*/
.container_cc72c1, /*channel, dm and memberlist header*/
[class*="privateChannelsHeaderContainer_"]:hover, /*dm header on hover*/
.wrapperCommon_a08117 /*channel header icons*/{
    color: var(--accent)
}
/* ... */

